Removed prices from the main page. Added links with anchors to courses. Fixed a layout issue for smaller screens.

--- a/src/font-style.css
+++ b/src/font-style.css
@@ -25,6 +25,19 @@ html {
     --input-fs: 1.5rem;
 }
 
+@media (max-height: 850px) and (min-width: 1368px) {
+    :root {
+        --nav-fs: 1.25rem;
+        --hero-fs: 3.25rem;
+        --hero-subtitle-fs: 1.5rem;
+        --h1-fs: 2rem;
+        --h2-fs: 1.75rem;
+        --h3-fs: 1.5rem;
+        --h4-fs: 1.25rem;
+        --p-fs: 1.25rem;
+        --input-fs: 1.25rem;
+    }
+}
 @media (max-width: 1368px) {
     :root {
         --nav-fs: 1.25rem;
